--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Enlazar CSS</title>
+        <title>Training sass</title>
   </head> 
   <body>
         <h1>Hola mundo</h1>
