--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-  <!DOCTYPE html>
-  <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Training sass</title>
-  </head> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Training sass</title>
+  </head>
   <body>
-        <h1>Hola mundo</h1>
-      
+    <div class="main">
+      <h1 class="main-header">Lorem ipsum dolor sit amet.</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam inventore
+        odit eos, ducimus in, assumenda ratione expedita dicta atque, aspernatur
+        error hic voluptates earum accusantium obcaecati asperiores quod sed
+        libero.
+      </p>
+    </div>
   </body>
-  </html>
+</html>
